--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
       </div>
       <div class="section__text">
-        <p class="section__text__p1">Hello, I'm</p>
+        <p class="section__text__p1 helloText" id="helloText"></p>
         <h1 class="title">Reynard Christiansen</h1>
         <p class="section__text__p2">Full Stack Developer</p>
         <div class="btn-container">
@@ -463,7 +463,6 @@
     <footer>
       <p>Copyright &#169; 2024 Reynard Christiansen. All Rights Reserved.</p>
     </footer>
-
 
     <script src="script.js"></script>
   </body>
