adding new porto

--- a/index.html
+++ b/index.html
@@ -477,6 +477,34 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
+                src="./assets/project-12.png"
+                alt="Project 12"
+                class="project-img"
+                onclick="openPopup(this.src)"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Pokemon Math</h2>
+
+            <div class="text-describe">
+              <p>
+                Pokemon Math is a mobile application that combines a Pokemon-themed game with mathematics to educate children in counting.
+              </p>
+            </div>
+
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/ReynardChristiansen/pokemon_mobile'"
+              >
+                Github
+              </button>
+              
+            </div>
+          </div>
+
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
                 src="./assets/project-7.png"
                 alt="Project 7"
                 class="project-img"
