--- a/index.html
+++ b/index.html
@@ -656,6 +656,34 @@
           </div>
 
           <div class="details-container color-container">
+            <div class="article-container ">
+              <img
+                src="./assets/project-13.png"
+                alt="Project 9"
+                class="project-img"
+                onclick="openPopup(this.src)"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Moving Car</h2>
+
+            <div class="text-describe">
+              <p>
+                This project is a car movement simulation using Three.js. Users can control the car using the WASD keys to move.
+              </p>
+            </div>
+
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/ReynardChristiansen/Moving_Car_ThreeJS'"
+              >
+                Github
+              </button>
+              
+            </div>
+          </div>
+
+          <div class="details-container color-container">
             <div class="article-container">
               <img
                 src="./assets/project-12.png"
